--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -252,6 +252,25 @@ main{
 
 // man-end
 
+// ====footer===
+
+footer{
+    text-align: center;
+    margin-top:1rem;
+    p{
+        color:$medium-Gray;
+        font-size:.9rem;
+        font-weight: 500;
+        a{
+            color:$almost-Black;
+            font-size:1rem;
+            font-weight: 700;
+        }
+    }
+}
+
+// ====footer end===
+
 
 @media screen and (min-width:600px) {
     main{
